Update titles and logic for indicating premium tests

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -306,7 +306,7 @@ button:disabled:not(.nav__item):not(.nav__dropdown__item) {
   white-space: pre-line;
 }
 
-.fa-medal {
+.medal-w-title {
   cursor: help;
 }
 
