--- a/react-app/src/components/Profile/User.css
+++ b/react-app/src/components/Profile/User.css
@@ -22,3 +22,40 @@
 .user__info {
   min-height: 14rem;
 }
+
+.payment-row {
+  padding-right: 1rem;
+}
+
+.payment-input {
+  /* width: 100%;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  border-radius: var(--primary-radius);
+  border: var(--tertiary-border);
+  font-size: 1.1rem;
+  box-sizing: border-box;
+  background-color: white;
+  max-height: 2.35rem; */
+}
+
+.StripeElement {
+  width: 100%;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  border-radius: var(--primary-radius);
+  border: var(--tertiary-border);
+  font-size: 1.1rem;
+  box-sizing: border-box;
+  background-color: white;
+  max-height: 2.35rem;
+}
+
+.CardField-input-wrapper {
+  background-color: none;
+}
+
+.StripeElement--focus {
+  background-color: var(--tertiary-color-light);
+  border: var(--primary-color) solid 1px;
+}
