--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -164,6 +164,9 @@ ul > li {
   .site__sub-section__data {
     text-align: center;
   }
+  .sml-scrn-lft-align {
+    text-align: left !important;
+  }
 }
 
 /* --------------- buttons --------------- */
@@ -181,6 +184,12 @@ ul > li {
     flex-wrap: nowrap !important;
     width: 100% !important;
     justify-content: center;
+  }
+}
+
+@media (max-width: 315px) {
+  .buttons-grp-colLrg-rowSml {
+    flex-wrap: wrap !important;
   }
 }
 
