--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -88,6 +88,8 @@ ul > li {
   justify-content: center;
   align-items: center;
   animation: pulse 2s infinite;
+  background-color: var(--tertiary-color-light);
+  border-radius: var(--primary-radius);
 }
 
 @keyframes pulse {
