Change mange splashpage image to svg

--- a/react-app/src/components/SplashPage/splashPage.css
+++ b/react-app/src/components/SplashPage/splashPage.css
@@ -21,6 +21,10 @@
   margin-bottom: 0;
 }
 
+.splash_top-section {
+  width: 100%;
+}
+
 .splash__primary-image {
   width: 100%;
   padding-top: .5rem;
