--- a/react-app/src/components/AllTests/AllTests.css
+++ b/react-app/src/components/AllTests/AllTests.css
@@ -15,17 +15,21 @@
   position: relative;
   cursor: pointer;
 }
+
 details {
   box-sizing: border-box;
   margin-top: 5px;
   background: white;
 }
-details summary::-webkit-details-marker {
+
+details .test-summary::-webkit-details-marker {
   display: none;
 }
+
 details[open] > .test-summary:before {
   transform: rotate(90deg);
 }
+
 .test-summary:before {
   content: '';
   border-width: 0.4rem;
@@ -35,6 +39,6 @@ details[open] > .test-summary:before {
   top: 0.9rem;
   left: 1rem;
   transform: rotate(0);
-  transform-origin: 0.2rem 50%;
+  transform-origin: 25% 50%;
   transition: 0.25s transform ease;
 }
