--- a/react-app/src/components/AllTests/AllTests.css
+++ b/react-app/src/components/AllTests/AllTests.css
@@ -5,13 +5,13 @@
 
 .test-summary {
   cursor: pointer;
-  border: 0.25rem solid transparent;
-  outline: none;
-  padding: 0.5rem;
   display: block;
+  border: 0.25rem solid transparent;
+  border-radius: var(--primary-radius);
+  outline: none;
+  padding: 0.5rem 0.5rem 0.5rem 2.2rem;
   background: var(--tertiary-color-light);
   color: var(--primary-color);
-  padding-left: 2.2rem;
   position: relative;
   cursor: pointer;
 }
