--- a/react-app/src/components/NavBar/navBar.css
+++ b/react-app/src/components/NavBar/navBar.css
@@ -1,6 +1,5 @@
 .site-header {
   position: sticky;
-  z-index: 1;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -12,6 +11,7 @@
   font-size: 1.2rem;
   height: 4rem;
   transition: top 0.3s;
+  transform-style: preserve-3d;
 }
 
 .site-header__title {
@@ -71,18 +71,25 @@
 }
 
 .nav__dropdown {
-  z-index: 1;
+  /* z-index: 1; */
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   position: absolute;
   right: 0;
-  margin-top: 2.5rem;
+  /* margin-top: 2.5rem; */
   background-color: rgb(255, 255, 255);
   box-shadow: 0 3px 6px -3px rgba(0, 0, 0, 0.5);
   box-sizing: border-box;
   width: 100%;
   padding: 0 10%;
+  transform: translateZ(-1rem);
+  bottom: -8rem;
+  transition: bottom 0.5s ease;
+}
+
+.nav__dropdown__hidden {
+  bottom: 0;
 }
 
 .nav__dropdown__button-closed {
