--- a/react-app/src/components/NavBar/navBar.css
+++ b/react-app/src/components/NavBar/navBar.css
@@ -16,8 +16,8 @@
 
 @media (max-width: 800px) {
   .site-header {
-    /* box-shadow: none; */
-    box-shadow: inset 0 -1rem transparent;
+    box-shadow: none;
+    /* box-shadow: inset 0 -1rem transparent; */
   }
 }
 
@@ -78,13 +78,11 @@
 }
 
 .nav__dropdown {
-  /* z-index: 1; */
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   position: absolute;
   right: 0;
-  /* margin-top: 2.5rem; */
   background-color: rgb(255, 255, 255);
   box-shadow: 0 3px 6px -3px rgba(0, 0, 0, 0.5);
   box-sizing: border-box;
