--- a/react-app/src/components/Payments/Payments.css
+++ b/react-app/src/components/Payments/Payments.css
@@ -7,3 +7,29 @@
   position: relative;
   top: -0.75em;
 }
+
+.payment-row {
+  padding-right: 1rem;
+}
+
+.StripeElement {
+  width: 100%;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  border-radius: var(--primary-radius);
+  border: var(--tertiary-border);
+  font-size: 1.1rem;
+  box-sizing: border-box;
+  background-color: white;
+  max-height: 2.35rem;
+}
+
+.CardField-input-wrapper {
+  background-color: none;
+}
+
+.StripeElement--focus,
+.StripeElement:focus {
+  background-color: var(--tertiary-color-light);
+  border: var(--primary-color) solid 1px;
+}
