--- a/react-app/src/components/Payments/Payments.css
+++ b/react-app/src/components/Payments/Payments.css
@@ -24,8 +24,11 @@
   background-color: none;
 }
 
-.StripeElement--focus,
-.StripeElement:focus {
+.StripeElement--focus {
   background-color: var(--tertiary-color-light);
   border: var(--primary-color) solid 1px;
+}
+
+.CardField-input-wrapper {
+  background-color: blueviolet;
 }
